[gd_scene load_steps=22 format=3 uid="uid://dhxgiti4485us"]

[ext_resource type="Texture2D" uid="uid://dtqtmwkuwjgsa" path="res://assets/SIN-BODY.png" id="1_resmx"]
[ext_resource type="Script" path="res://scenes/sin.gd" id="1_tpbce"]
[ext_resource type="Texture2D" uid="uid://b7piqnt6uy4mg" path="res://assets/SIN-FOOT.png" id="2_yqbfd"]
[ext_resource type="Texture2D" uid="uid://cluk513qbj138" path="res://assets/SIN-MOUTH.png" id="3_fms1n"]
[ext_resource type="Texture2D" uid="uid://cjuypopwxc4nk" path="res://assets/SIN-EYE.png" id="4_u02gq"]
[ext_resource type="Texture2D" uid="uid://dean872ngy8rc" path="res://assets/SIN-TOP-HORN.png" id="5_w1vhp"]
[ext_resource type="Texture2D" uid="uid://druhfxl514kr3" path="res://assets/SIN-SIDE-HORN-BASE.png" id="6_8ss7u"]
[ext_resource type="Texture2D" uid="uid://uihmcprpacb8" path="res://assets/SIN-SIDE-HORN-TIP.png" id="7_bls4j"]
[ext_resource type="Script" path="res://scripts/leg.gd" id="8_p8qnk"]
[ext_resource type="PackedScene" uid="uid://cc3a56med2ejh" path="res://scenes/arm.tscn" id="9_2wy5m"]

[sub_resource type="Animation" id="Animation_3guhd"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%EyesAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%MouthAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16.8303)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Rig:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%FootSpriteL:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, 16)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%FootSpriteR:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, 16)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%LegR:points")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, 10, 0, -10)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%LegL:points")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, 10, 0, -10)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%LegsAnchor:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4cy23"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%EyesAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -300), Vector2(0, 0), Vector2(0, 300), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%HornsSideAnchor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200), Vector2(0, -16), Vector2(0, 200), Vector2(0, -16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%HornsTopAnchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -250), Vector2(0, -16), Vector2(0, 250), Vector2(0, -16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%MouthAnchor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -16.8303), Vector2(0, -300), Vector2(0, -16.8303), Vector2(0, 300), Vector2(0, -16.8303)]
}

[sub_resource type="Animation" id="Animation_mhodi"]
resource_name = "move"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 10), Vector2(0, 5), Vector2(0, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Rig:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -3), Vector2(0, -12), Vector2(0, -3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%FootSpriteL:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(7.5, 16), Vector2(7.5, 6), Vector2(7.5, 16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%FootSpriteR:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(7.5, 6), Vector2(7.5, 16), Vector2(7.5, 6)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%LegL:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [PackedVector2Array(0, 10, 0, -10), PackedVector2Array(0, 0, 0, -15), PackedVector2Array(0, 10, 0, -10)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%LegR:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [PackedVector2Array(0, 0, 0, -10), PackedVector2Array(0, 10, 0, -15), PackedVector2Array(0, 0, 0, -10)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%LegsAnchor:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, -1), Vector2(1, 1), Vector2(1, -1), Vector2(1, 1), Vector2(1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnjux"]
_data = {
"RESET": SubResource("Animation_3guhd"),
"idle": SubResource("Animation_4cy23"),
"move": SubResource("Animation_mhodi")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ollhe"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b81yi"]
animation = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uakee"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gb1cb"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v72by"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cvujl"]
states/Start/position = Vector2(323, 100)
states/idle/node = SubResource("AnimationNodeAnimation_ollhe")
states/idle/position = Vector2(510, 100)
states/move/node = SubResource("AnimationNodeAnimation_b81yi")
states/move/position = Vector2(685, 100)
transitions = ["idle", "move", SubResource("AnimationNodeStateMachineTransition_uakee"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_gb1cb"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_v72by")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_dcwod"]
graph_offset = Vector2(-458.166, 86.0389)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_cvujl")
nodes/StateMachine/position = Vector2(100, 120)
nodes/output/position = Vector2(300, 140)
node_connections = [&"output", 0, &"StateMachine"]

[node name="SIN" type="Node2D"]
texture_filter = 1
script = ExtResource("1_tpbce")

[node name="Visual" type="Node2D" parent="."]
y_sort_enabled = true

[node name="BodySprite" type="Sprite2D" parent="Visual"]
unique_name_in_owner = true
texture = ExtResource("1_resmx")

[node name="FootSpriteL" type="Sprite2D" parent="Visual"]
unique_name_in_owner = true
z_index = -7
position = Vector2(-9.11895, 40.3272)
rotation = -3.14159
scale = Vector2(1, -1)
texture = ExtResource("2_yqbfd")
offset = Vector2(7.5, 16)

[node name="FootSpriteR" type="Sprite2D" parent="Visual"]
unique_name_in_owner = true
z_index = -7
position = Vector2(9.11891, 39.6728)
texture = ExtResource("2_yqbfd")
offset = Vector2(7.5, 16)

[node name="FaceSpriteGroup" type="Node2D" parent="Visual"]
unique_name_in_owner = true
z_index = 1
position = Vector2(-19, 58)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="MouthSprite" type="Sprite2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
z_index = 3
position = Vector2(-18.9524, -73.0893)
texture = ExtResource("3_fms1n")
offset = Vector2(0, 10)

[node name="EyeSpriteL" type="Sprite2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
modulate = Color(0.207843, 0.207843, 0.207843, 1)
z_index = 3
position = Vector2(-7.91287, -72.9766)
rotation = -3.14159
scale = Vector2(1, -1)
texture = ExtResource("4_u02gq")
offset = Vector2(-2, 4)

[node name="EyeSpriteR" type="Sprite2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
modulate = Color(0.207843, 0.207843, 0.207843, 1)
z_index = 3
position = Vector2(-30.0875, -72.9765)
texture = ExtResource("4_u02gq")
offset = Vector2(-2, 4)

[node name="HornTopSpriteL" type="Sprite2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
z_index = 4
y_sort_enabled = true
position = Vector2(-7.00019, -74.9211)
rotation = 3.14159
scale = Vector2(0.99998, -0.999978)
texture = ExtResource("5_w1vhp")
offset = Vector2(0, -26)

[node name="HornTopSpriteR" type="Sprite2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
z_index = 3
y_sort_enabled = true
position = Vector2(-31.0002, -74.921)
texture = ExtResource("5_w1vhp")
offset = Vector2(0, -26)

[node name="HornSideGroupL" type="Node2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
z_index = 3
position = Vector2(7.99981, -74.4585)
rotation = -3.14159
scale = Vector2(1, -1)

[node name="HornSideBaseSpriteL" type="Sprite2D" parent="Visual/FaceSpriteGroup/HornSideGroupL"]
unique_name_in_owner = true
z_index = -5
position = Vector2(-2, -0.500011)
rotation = -3.14159
scale = Vector2(-1, -1)
texture = ExtResource("6_8ss7u")
offset = Vector2(1, 0.5)

[node name="HornSideTipSpriteL" type="Sprite2D" parent="Visual/FaceSpriteGroup/HornSideGroupL"]
unique_name_in_owner = true
z_index = 6
position = Vector2(-5, 10.5)
rotation = -3.14159
scale = Vector2(-1, -1)
texture = ExtResource("7_bls4j")

[node name="HornSideGroupR" type="Node2D" parent="Visual/FaceSpriteGroup"]
unique_name_in_owner = true
z_index = 1
position = Vector2(-46.0002, -74.4584)

[node name="HornSideBaseSpriteR" type="Sprite2D" parent="Visual/FaceSpriteGroup/HornSideGroupR"]
unique_name_in_owner = true
z_index = -5
position = Vector2(-1, 0.5)
texture = ExtResource("6_8ss7u")

[node name="HornSideTipSpriteR" type="Sprite2D" parent="Visual/FaceSpriteGroup/HornSideGroupR"]
unique_name_in_owner = true
z_index = 4
position = Vector2(-6, 10.5)
texture = ExtResource("7_bls4j")

[node name="LegL" type="Line2D" parent="Visual"]
unique_name_in_owner = true
z_index = -2
position = Vector2(-9.11895, 40.3272)
rotation = -3.14159
scale = Vector2(1, -1)
points = PackedVector2Array(0, 10, 0, -10)
width = 7.295
default_color = Color(0.952941, 0.952941, 0.952941, 1)
script = ExtResource("8_p8qnk")

[node name="LegR" type="Line2D" parent="Visual"]
unique_name_in_owner = true
z_index = -2
position = Vector2(9.11891, 39.6728)
rotation = 3.14159
scale = Vector2(1, -1)
points = PackedVector2Array(0, 10, 0, -10)
width = 7.295
default_color = Color(0.952941, 0.952941, 0.952941, 1)
script = ExtResource("8_p8qnk")

[node name="ArmL" parent="Visual" instance=ExtResource("9_2wy5m")]
unique_name_in_owner = true
position = Vector2(-19.5462, -14.914)

[node name="ArmR" parent="Visual" instance=ExtResource("9_2wy5m")]
unique_name_in_owner = true
position = Vector2(21.6353, -15.4351)
rotation = -3.14159
scale = Vector2(1, -1)
arm_side = "right"

[node name="Rig" type="Node2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(0.1, 0.01)

[node name="MouthAnchor" type="Node2D" parent="Rig"]
unique_name_in_owner = true
position = Vector2(0, -16.8303)
rotation = 0.00238899

[node name="Mouth" type="RemoteTransform2D" parent="Rig/MouthAnchor"]
position = Vector2(0, 200)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/MouthSprite")
update_rotation = false
update_scale = false

[node name="EyesAnchor" type="Node2D" parent="Rig"]
unique_name_in_owner = true
rotation = 4.71239

[node name="EyeL" type="RemoteTransform2D" parent="Rig/EyesAnchor"]
position = Vector2(-199.917, -110.873)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/EyeSpriteL")
update_rotation = false
update_scale = false

[node name="EyeR" type="RemoteTransform2D" parent="Rig/EyesAnchor"]
position = Vector2(-199.917, 110.873)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/EyeSpriteR")
update_rotation = false
update_scale = false

[node name="HornsSideAnchor" type="Node2D" parent="Rig"]
unique_name_in_owner = true
position = Vector2(0, -75.8489)
rotation = 4.71239

[node name="HornSideL" type="RemoteTransform2D" parent="Rig/HornsSideAnchor"]
position = Vector2(-30, -270)
scale = Vector2(-1, 1)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/HornSideGroupL")
update_rotation = false
update_scale = false

[node name="HornSideR" type="RemoteTransform2D" parent="Rig/HornsSideAnchor"]
position = Vector2(-30, 270)
scale = Vector2(1, -1)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/HornSideGroupR")
update_rotation = false
update_scale = false

[node name="HornsTopAnchor" type="Node2D" parent="Rig"]
unique_name_in_owner = true
position = Vector2(0, -92.1122)
rotation = 4.71239

[node name="HornTopL" type="RemoteTransform2D" parent="Rig/HornsTopAnchor"]
position = Vector2(0, -120)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/HornTopSpriteL")
update_rotation = false
update_scale = false

[node name="HornTopR" type="RemoteTransform2D" parent="Rig/HornsTopAnchor"]
position = Vector2(0, 120)
remote_path = NodePath("../../../Visual/FaceSpriteGroup/HornTopSpriteR")
update_rotation = false
update_scale = false

[node name="ArmLAnchor" type="Node2D" parent="Rig"]
unique_name_in_owner = true
rotation = 5.31239

[node name="ArmL" type="RemoteTransform2D" parent="Rig/ArmLAnchor"]
position = Vector2(-200, -100)
remote_path = NodePath("../../../Visual/ArmL")
update_rotation = false
update_scale = false

[node name="ArmRAnchor" type="Node2D" parent="Rig"]
unique_name_in_owner = true
rotation = 5.45239

[node name="ArmR" type="RemoteTransform2D" parent="Rig/ArmRAnchor"]
position = Vector2(104.167, 197.862)
rotation = -1.59174
remote_path = NodePath("../../../Visual/ArmR")
update_rotation = false
update_scale = false

[node name="LegRig" type="Node2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(0.1, 0.01)

[node name="LegsAnchor" type="Node2D" parent="LegRig"]
unique_name_in_owner = true
rotation = 4.71239

[node name="FootL" type="RemoteTransform2D" parent="LegRig/LegsAnchor"]
position = Vector2(-32.7168, -91.1895)
remote_path = NodePath("../../../Visual/FootSpriteL")
update_rotation = false
update_scale = false

[node name="FootR" type="RemoteTransform2D" parent="LegRig/LegsAnchor"]
position = Vector2(32.7168, 91.1891)
remote_path = NodePath("../../../Visual/FootSpriteR")
update_rotation = false
update_scale = false

[node name="LegL" type="RemoteTransform2D" parent="LegRig/LegsAnchor"]
position = Vector2(-32.7168, -91.1895)
remote_path = NodePath("../../../Visual/LegL")
update_rotation = false
update_scale = false

[node name="LegR" type="RemoteTransform2D" parent="LegRig/LegsAnchor"]
position = Vector2(32.7168, 91.1891)
remote_path = NodePath("../../../Visual/LegR")
update_rotation = false
update_scale = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_jnjux")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath(".")
tree_root = SubResource("AnimationNodeBlendTree_dcwod")
anim_player = NodePath("../AnimationPlayer")
